# tetherio_ai_research_engineer_task

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.code-workspace  vcpkg.json
cmake/: FindTarget.cmake  LinkTarget.cmake  LoadTarget.cmake
examples/: binmatmull.cpp  llama-cpp-interop.cpp
include/tether_io/: algorithm.hpp  config.hpp  context.hpp  sanbox.hpp  types.hpp
include/tether_io/algorithm/cpu_native/: binmatmul.hpp  data_formatting.hpp
include/tether_io/algorithm/vulkan_native/: binmatmul.hpp  fill.hpp  multiply.hpp
include/tether_io/context/: vulkan_native.hpp
include/tether_io/integration/: llama_vulkan_binmatmul.hpp
res/: EnvTest.cpp  settings.json
res/docs/: Fine-Tuning 1.58-bit BitNet on Mali-G78 via llama.cpp and Vulkan.docx
res/kernels/vk/: binmatmul.comp.glsl  fill.comp.glsl  index.json  multiply.comp.glsl
res/models/: tiny-llama.gguf
src/: demo.cpp  main.cpp
tests/: binmatmul_sandbox_tests.cpp
